# rustformer

./: Cargo.toml
demo/: Cargo.toml
demo/src/: main.rs
interfaces/: Cargo.toml
interfaces/src/: lib.rs
micrograd/: Cargo.toml
micrograd/src/: cell_ptr.rs  lib.rs  node.rs  value.rs
micrograd/tests/: matrix.rs
nn/: Cargo.toml
nn/src/: dense_layer.rs  embedding_table.rs  lib.rs  optim.rs  relu_layer.rs  serial.rs  sigmoid_layer.rs  utils.rs
nn/tests/: learning.rs
transformer/: Cargo.toml
transformer/src/: model.rs
