[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
transformer = { path = "../transformer" }
matrix_library = { path = "../../matrix_library" }
nn = { path = "../nn" }
rand = "0.8.5"
rand_chacha = "0.3.1"
